--- a/styles/sass/_mobile_nav.scss
+++ b/styles/sass/_mobile_nav.scss
@@ -19,10 +19,11 @@
     transition: bottom 500ms ease-in-out;
     text-align: center;
     transform: translateY(-100%);
-    width: 100%;
+    width: 0;
     z-index: 1;
     &.expanded {
       transform: translate(-39%, 5%);
+      width: 100%;
       a {
         animation: 1s fadeIn;
         animation-fill-mode: forwards;
